--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -271,3 +271,7 @@ a {
 .footer h4 {
     font-weight: normal;
 }
+
+.popover h3 {
+    font-weight: 500;
+}
